--- a/starwarsUI/style.scss
+++ b/starwarsUI/style.scss
@@ -11,16 +11,71 @@ body, #app {
 
 .movie {
   display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin: 8.25rem auto;
+  margin-bottom: 6.6rem;
   .description {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
   .info {
+    font-family: Montserrat;
     font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0em;
+    text-align: left;
     &__title {
       font-size: 2.5rem;
+      font-weight: 700;
+      line-height: 49px;
     }
+    &__synopsis {
+      height: 90px;
+      width: 422px;
+      left: 187px;
+      top: 319px;
+    }
+  }
+  .date {
+    font-family: 'Amethysta';
+    font-size: 15rem;
+    font-weight: 700;
+    line-height: 12rem;
+    display: flex;
   }
 }
 
+.navbar {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  &__arrows {
+    width: 7.5rem;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__timeline {
+    position: relative;
+    margin-left: 6.25rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &-dot {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      background-color: #FFF38A;
+    }
+    &-line {
+      position: absolute;
+      height: 2px;
+      width: 100%;
+      background-color: #FFF38A;
+    }
+  }
+}
