--- a/starwarsUI/style.scss
+++ b/starwarsUI/style.scss
@@ -21,6 +21,7 @@ body, #app {
   margin: 8.25rem auto;
   margin-bottom: 6.6rem;
   .description {
+    width: 55%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -39,16 +40,47 @@ body, #app {
       line-height: 49px;
     }
     &__synopsis {
-      width: 70%;
+      width: 80%;
     }
   }
   .date {
-    margin-right: 3.25rem;
     font-family: 'Amethysta';
     font-size: 15rem;
     font-weight: 700;
     line-height: 12rem;
     display: flex;
+  }
+  .image-section {
+    width: 422px;
+    height: 604px;
+    overflow: hidden;
+    .poster-wrapper {
+      display: flex;
+      width: 300%;
+      height: 100%;
+      left: 0;
+      transform: translateX(0);
+      transition: transform 500ms ease-out;
+      &.active2 {
+        transform: translateX(-33.3%);
+      }
+      &.active3 {
+        transform: translateX(-66.6%);
+      }
+      .poster {
+        width: 33.3%;
+        height: 100%;
+        &.p-1 {
+          background-image: url(./assets/MV5BNzVlY2MwMjktM2E4OS00Y2Y3LWE3ZjctYzhkZGM3YzA1ZWM2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@\ 1.png);
+        }
+        &.p-2 {
+          background-image: url(./assets/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@\ 1.png);
+        }
+        &.p-3 {
+          background-image: url(./assets/55c53b944410859376e55edc1ae3ae5b\ 1.png);
+        }
+      }
+    }
   }
 }
 
