implemented responsive design

--- a/starwarsUI/style.scss
+++ b/starwarsUI/style.scss
@@ -1,6 +1,13 @@
 $background: #060447;
 $active: #FFF38A;
 $iddle: #827B68;
+$bp: 1050px;
+
+@mixin small-screen($breakpoint) {
+  @media (max-width: $breakpoint) {
+      @content;
+  }
+}
 
 body, #app {
   margin: 0;
@@ -20,8 +27,14 @@ body, #app {
   min-width: 60rem;
   margin: 8.25rem auto;
   margin-bottom: 6.6rem;
+  @include small-screen($bp) {
+    margin-top: 2rem;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .description {
+    height: 604px;
     width: 55%;
     display: flex;
     flex-direction: column;
@@ -54,6 +67,9 @@ body, #app {
     line-height: 30px;
     letter-spacing: 0em;
     text-align: left;
+    @include small-screen($bp) {
+      text-align: center;
+    }
     &__title {
       font-size: 2.5rem;
       font-weight: 700;
@@ -61,6 +77,9 @@ body, #app {
     }
     &__synopsis {
       width: 80%;
+      @include small-screen($bp) {
+        width: 100%
+      }
     }
   }
 
@@ -70,6 +89,10 @@ body, #app {
     font-weight: 700;
     line-height: 12rem;
     display: flex;
+    @include small-screen($bp) {
+      justify-content: center;
+      margin-bottom: 50px;
+    }
     .decade, .year {
       width: 135px;
       position: relative;
@@ -106,13 +129,13 @@ body, #app {
         width: 33.3%;
         height: 100%;
         &.p-1 {
-          background-image: url(./assets/MV5BNzVlY2MwMjktM2E4OS00Y2Y3LWE3ZjctYzhkZGM3YzA1ZWM2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@\ 1.png);
+          background-image: url("https://www.zupimages.net/up/22/05/8u4m.png");
         }
         &.p-2 {
-          background-image: url(./assets/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@\ 1.png);
+          background-image: url("https://zupimages.net/up/22/05/ng1k.png");
         }
         &.p-3 {
-          background-image: url(./assets/55c53b944410859376e55edc1ae3ae5b\ 1.png);
+          background-image: url("https://zupimages.net/up/22/05/x5b2.png");
         }
       }
     }
@@ -124,11 +147,21 @@ body, #app {
   min-width: 60rem;
   margin: 0 auto;
   display: flex;
+  @include small-screen($bp) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   &__arrows {
     width: 7.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include small-screen($bp) {
+      margin-top: 50px;
+      margin-bottom: 50px;
+      order: 2;
+    }
     button {
       border: none;
       background-color: $background;
@@ -152,6 +185,9 @@ body, #app {
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+    @include small-screen($bp) {
+      margin-left: -20%;
+    }
     li {
       list-style: none;
       position: relative;
